<resources>
    <string name="app_name">Books2Trees</string>
    <string name="menu_title_home">Home</string>
    <string name="menu_title_profile">Profile</string>
    <string name="menu_title_search">Search</string>
    <string name="menu_title_settings">Settings</string>
    <string name="menu_title_info">Info</string>
    <string name="book_caption">Book Cover</string>
    <string name="popular_books_caption">Popular books</string>
    <string name="recent_books_caption">Continue Reading</string>
    <string name="awarded_books_caption">Awarded Books</string>
    <string name="settings_account">Accounts</string>
    <string name="settings_updates">Updates</string>
    <string name="settings_policies">Privacy policy</string>
    <string name="settings_about_us">About us</string>
    <string name="settings_help">Help and Support</string>
    <string name="search_hint">Search…</string>
    <string name="filter_caption">Filter Option</string>
    <string name="local_key">app_locale</string>
    <string name="pref_category_links">Links</string>
    <string name="pref_category_apps">App updates</string>
    <string name="settings_general">General</string>
    <string name="home_expanded_hide">Hide</string>
    <string name="cancel_btn_caption">Cancel</string>
    <string name="apply_btn_caption">Apply</string>
    <string name="pdf_options">Options</string>
    <string name="import_pdf_caption">Import Pdf</string>
    <string name="msg_sry">Sorry we require you to grant permission</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sort">Sort</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="remove">Remove</string>
    <string name="reload_error">Retry</string>
    <string name="open">Open</string>
    <string name="on_hold">Keep On Hold</string>
    <string name="drop">Drop</string>
    <string name="default_web_client_id">303964748193-vnlsc9is7r1nhsq149ajauhu2m91d57p.apps.googleusercontent.com</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_dialog">Are you sure, do you want to logout?</string>
    <string name="no_items">No items</string>
    <string name="pdf_error_text">Could not load PDF</string>
</resources>