<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- The ID is used by the Navigation component to navigate to a destination, and it must have
            the same ID as the destination you want to navigate to in the navigation graph -->
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_outline_home_24"
        android:orderInCategory="1"
        android:title="@string/menu_title_home" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_outline_profile_24"
        android:orderInCategory="2"
        android:title="@string/menu_title_profile" />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search_24"
        android:orderInCategory="3"
        android:title="@string/menu_title_search" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_outline_settings_24"
        android:orderInCategory="4"
        android:title="@string/menu_title_settings" />
    <item
        android:id="@+id/infoFragment"
        android:icon="@drawable/ic_outline_info_24"
        android:orderInCategory="5"
        android:title="@string/menu_title_info" />

</menu>